==> RedBearLab/nRF51822-Arduino/arduino-1.6.x/hardware/RBL/RBL_nRF51822/cores/RBL_nRF51822/wiring_analog.cpp <==
#include "Arduino.h"
#include "wiring_analog.h"

uint32_t analogRead(uint32_t pin)
{
	PinName 	nrf_pin;
	uint32_t pValue, value;
	
	nrf_pin = Pin_nRF51822_to_Arduino(pin);
	MBED_ASSERT(nrf_pin != (PinName)NC);
	
	if((uint32_t)nrf_pin > 7 || (uint32_t)nrf_pin == 0)
		return 0xFFFF;
	
	pValue = (1 << ((uint32_t)nrf_pin + 1));
	NRF_ADC->CONFIG = ( ADC_CONFIG_RES_10bit << ADC_CONFIG_RES_Pos) |
					  ( analogReference_inpsel_type << ADC_CONFIG_INPSEL_Pos) |
					  ( analogReference_ref_type << ADC_CONFIG_REFSEL_Pos) |
					  ( pValue << ADC_CONFIG_PSEL_Pos) |
					  ( analogReference_ext_type << ADC_CONFIG_EXTREFSEL_Pos);
	
	NRF_ADC->INTENCLR = 0xFFFFFFFF;
	NRF_ADC->ENABLE = ADC_ENABLE_ENABLE_Enabled << ADC_ENABLE_ENABLE_Pos;
	NRF_ADC->TASKS_START = 1;
	
	while( (NRF_ADC->BUSY & ADC_BUSY_BUSY_Msk) == (ADC_BUSY_BUSY_Busy << ADC_BUSY_BUSY_Pos) );
	
	value = NRF_ADC->RESULT;
	
	value = conversion_Resolution(value, 10, analogReadResolution_bit);
	NRF_ADC->ENABLE = (ADC_ENABLE_ENABLE_Disabled 	<< ADC_ENABLE_ENABLE_Pos);
	/* Sure pin is released */
	NRF_ADC->CONFIG |= (ADC_CONFIG_PSEL_Disabled << ADC_CONFIG_PSEL_Pos);
	
	return value;
}

void analogWrite(uint32_t pin, uint32_t value)
{
	PinName	nrf_pin;
	uint8_t num;
	pwmout_t obj;

	nrf_pin = Pin_nRF51822_to_Arduino(pin);
	MBED_ASSERT(nrf_pin != (PinName)NC);
	
	num = getMatchChannel(nrf_pin);
	if(num < 3) {
		/* Channel has exit, Write value */	
		// if( value == 0 )
		// {	
			// setPWMChannel(num, (PinName)NC);
			// obj.pwm = (PWMName)num;
			// pwmout_free(&obj);
			// pinMode(pin, OUTPUT);
			// digitalWrite(pin, LOW);
			// return;
		// }
		// Serial1.print("here1 : ");
		// Serial1.println((pow(2, analogWriteResolution_bit)-2), DEC);
		// Serial1.println(value, DEC);
		// if( value >= (pow(2, analogWriteResolution_bit)-2) )
		// {	Serial1.print("here2 : ");
			// setPWMChannel(num, (PinName)NC);
			// obj.pwm = (PWMName)num;
			// pwmout_free(&obj);
			// pinMode(pin, OUTPUT);
			// digitalWrite(pin, HIGH);
			// return;	
		// }
		uint32_t value_8bit;
		float duty;
		value_8bit = conversion_Resolution(value, analogWriteResolution_bit, 8);
		duty = (float)value_8bit / (255);
		
		obj.pwm = (PWMName)num;
		pwmout_write(&obj, duty);	
	}
	else {
		num = getFreeChannel();
		if(num >= 3)
			return;
			
		if( value == 0 )
		{	
			setPWMChannel(num, (PinName)NC);
			obj.pwm = (PWMName)num;
			pwmout_free(&obj);
			pinMode(pin, OUTPUT);
			digitalWrite(pin, LOW);
			return;
		}
		if( value >= (pow(2, analogWriteResolution_bit)-2) )
		{
			setPWMChannel(num, (PinName)NC);
			obj.pwm = (PWMName)num;
			pwmout_free(&obj);
			pinMode(pin, OUTPUT);
			digitalWrite(pin, HIGH);
			return;	
		}
		/* Have a free channel */	
		obj.pwm = (PWMName)num;
		pwmout_init(&obj, nrf_pin);	
		/* Write value */	
		uint32_t value_8bit;
		float duty;
		value_8bit = conversion_Resolution(value, analogWriteResolution_bit, 8);
		duty = (float)value_8bit / (255);
		pwmout_write(&obj, duty);
		setPWMChannel(num, nrf_pin);
	}
}
